--- a/src/assets/scss/components/_header.sass
+++ b/src/assets/scss/components/_header.sass
@@ -67,7 +67,7 @@
   &.open__mobile__navigation
     opacity: 1
     visibility: visible
-    padding: 0 15%
+    padding: 0
 
   .outer-close
     position: absolute
